--- a/mvvmreduxsample/src/main/res/layout/todo_list.xml
+++ b/mvvmreduxsample/src/main/res/layout/todo_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.github.vulpeszerda.mvvmreduxsample.sample.com.github.vulpeszerda.mvvmreduxsample.list.TodoListActivity">
+    tools:context="com.github.vulpeszerda.mvvmreduxsample.list.TodoListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
